Api fixes, order fixes [stage]
